# drone_complementary_filter

./: README.md  result.xml
RMSE/: CMakeLists.txt  package.xml
RMSE/src/: TypeDefs.h  matplotlibcpp.h
agstF/: CMakeLists.txt  package.xml
agstF/data/: plot_fig.m  res_data.csv  res_data.csv.orig
agstF/src/: AGSTF_Attitude.cpp  AGSTF_Attitude.h  AGSTF_main.cpp
ekF/: CMakeLists.txt  package.xml
ekF/src/: EKF_Attitude.cpp  EKF_Attitude.h  EKF_main.cpp
eskF/: CMakeLists.txt  package.xml
eskF/src/: ESKF_Attitude.cpp  ESKF_Attitude.h  ESKF_main.cpp
groundtruth/: CMakeLists.txt  package.xml  readme.md
groundtruth/src/: Convert.h  gt_main.cpp
launch/: CMakeLists.txt  package.xml
launch/launch/: runall.launch
mahF/: CMakeLists.txt  package.xml
mahF/launch/: waypoint_fixed.launch
mahF/src/: MahF_Attitude.cpp  MahF_Attitude.h  MahF_main.cpp
main/: CMakeLists.txt  package.xml
main/src/: Convert.cpp  main.cpp
plot/: CMakeLists.txt  package.xml  plot_rmse_1.py  plot_rmse_2.py  plot_rmse_3.py  plot_ros.py  plot_speed.py
plot/csv_inpaper/: 1-pitch.csv  1-roll.csv  1-yaw.csv  2-pitch.csv  2-roll.csv  2-yaw.csv  3-pitch.csv  3-roll.csv  3-yaw.csv
plot/src/: EKF_Attitude.cpp  EKF_Attitude.h  main.cpp
